# symbol-version-check

./: Cargo.toml  LICENSE-MIT  README.md
src/: elf.rs  main.rs  requirements.rs  symbols.rs  version.rs
