[package]
name = "symbol-version-check"
description = "Check versions of dynamically linked symbols in ELF files"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tonyabbott/symbol-version-check"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
colored = "3"
cpp_demangle = "0.4"
object = "0.37"
rustc-demangle = "0.1"
